# sevendparser

./: .gitignore  README.md  pyproject.toml
src/: main.py
tests/: conftest.py  test_weapon_attributes.py  test_weapon_translations.py
