[tool.poetry]
name = "sevendparser"
version = "0.1.0"
description = "A Python parser for 7 Days to Die configuration files"
authors = ["hxl <oskari.tiala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
prospector = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
